tests/invalid/void_vars_and_params.ar
// errc: 2

fn main() {
    const something = {
        const a = 1;
    };
    cool(something);
}

fn cool(arg: void) {}
